--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body.home {
 }
 
 .logo {
+    font-size: 1.13rem;
     font-family: 'Alata', sans-serif;
     text-transform: uppercase;
     font-weight: 400;
@@ -220,12 +221,12 @@ h1 {
     flex-direction: column;
     justify-content: center;
     background-color: transparent;
-    width: 100%;
     padding-bottom: 50px;
     position: relative;
     left: 0px;
     z-index: 2;
     padding-bottom: 100px;
+    margin: 0px 3px;
 }
 
 #close-button-container {
@@ -298,6 +299,20 @@ h1 {
     padding: 0px 60px;
     max-width: 350px;
 }
+
+#text-container h1 {
+    font-size: 4rem;
+    padding: 0px 0px 30px 0px;
+    border-bottom: 5px solid #1a1a1a;
+    margin: 30px 0px;
+}
+
+#text-container :nth-child(3) {
+    font-style: italic;
+    font-size: 0.9rem;
+    color:#aaaaaa;
+}
+
 
 button#nav-left {
     border: none;
@@ -949,6 +964,13 @@ a.social {
         max-width: 100%;
     }
 
+    #text-container h1 {
+        font-size: 2rem;
+        padding: 0px;
+        border-bottom: none;
+        margin: 10px 0px;
+    }
+
     h1 {
         font-size: 2rem;
     }
@@ -1238,7 +1260,7 @@ a.social {
     #text-container {
         display: flex;
         justify-content: center;
-        max-width: 90%;
+        width: 100%;
         padding: 10px 7px;
     }
 
